--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,5 @@
-image: comp1531/basic:latest
- 
-cache:
-  paths:
-    - node_modules
- 
+image: node:18-bullseye-slim
+
 stages:
   - checks
 
@@ -28,14 +24,6 @@ linting:
   stage: checks
   script:
     - npm run lint
-  only:
-    - master
-    - merge_requests
-
-typescript:
-  stage: checks
-  script:
-    - npm run tsc
   only:
     - master
     - merge_requests
