--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "http-errors": "^2.0.0",
         "middleware-http-errors": "^0.1.1",
         "morgan": "^1.10.0",
+        "nanoid": "^3.3.7",
         "rewire": "^6.0.0",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3",
