--- a/package.json
+++ b/package.json
@@ -10,14 +10,21 @@
         "posttest": "npm run cleanup-sync-request || true"
     },
     "dependencies": {
+        "18": "^0.0.0",
+        "19": "^0.0.0",
+        "20": "^1.0.0",
         "cors": "^2.8.5",
+        "curl": "^0.1.4",
         "express": "^4.18.0",
         "http-errors": "^2.0.0",
         "middleware-http-errors": "^0.1.1",
         "morgan": "^1.10.0",
         "nanoid": "^3.3.7",
+        "node": "^22.5.0",
+        "request": "^2.88.2",
         "rewire": "^6.0.0",
-        "ts-node": "^10.7.0",
+        "tough-cookie": "^4.1.4",
+        "ts-node": "^10.9.2",
         "typescript": "^4.6.3",
         "validator": "^13.7.0"
     },
@@ -38,7 +45,7 @@
         "jest": "^28.1.0",
         "nyc": "^15.1.0",
         "swagger-ui-express": "^4.6.2",
-        "sync-request-curl": "^2.1.5",
+        "sync-request-curl": "^2.2.0",
         "ts-jest": "^28.0.2",
         "yaml": "^2.2.2"
     },
