--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "cleanup-sync-request": "pkill -f node_modules/sync-rpc/lib/worker.js > /dev/null 2>&1",
         "posttest": "npm run cleanup-sync-request || true"
     },
+    "engines": {
+        "node": "18.x"
+    },
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.18.0",
@@ -19,7 +22,8 @@
         "rewire": "^6.0.0",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3",
-        "validator": "^13.7.0"
+        "validator": "^13.7.0",
+        "vercel": "^35.2.3"
     },
     "devDependencies": {
         "@types/cors": "^2.8.12",
